# Psd-manager

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  windows-portable.yml
scripts/: smoke-test.mjs
scripts/test-utils/: source-modules.mjs
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionPopover.svelte  AppDialog.svelte  ClearableInput.svelte  ClearableTextarea.svelte  ConfirmationDialog.svelte  DeviceDetailPane.svelte  DeviceListPane.svelte  PasswordGeneratorDrawer.svelte  SidebarPane.svelte  StatusToast.svelte  Topbar.svelte
src/lib/: config.ts  constants.ts  device-commands.ts  layout.ts  password-generator.ts  types.ts  utils.ts  vault.ts
