[package]
name = "device-password-manager"
version = "0.1.0"
description = "设备密码管理工具"
authors = ["fan"]
edition = "2021"

[lib]
name = "device_password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "device-password-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
